sf-hrms/force-app/main/default/objects/Employee__c/fields/Aadhaar__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar__c</fullName>
    <label>Aadhaar</label>
    <type>Text</type>
    <length>20</length>
</CustomField>