sf-hrms/force-app/main/default/objects/Employee__c/fields/Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date__c</fullName>
    <label>Confirmation Date</label>
    <type>Date</type>
    <description>Date when the employee was confirmed after probation</description>
    <inlineHelpText>Date the employee was confirmed as a permanent member</inlineHelpText>
</CustomField>