sf-hrms/force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>