sf-hrms/force-app/main/default/objects/Employee__c/fields/Department_Ref__c.field-meta.xml
<CustomField>
    <fullName>Department_Ref__c</fullName>
    <label>Department (Lookup)</label>
    <type>Lookup</type>
    <referenceTo>Department__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <relationshipLabel>Employees</relationshipLabel>
    <description>Structured department lookup — replaces legacy text Department__c field</description>
    <inlineHelpText>Select the employee's department from the dropdown</inlineHelpText>
</CustomField>