sf-hrms/force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>