sf-hrms/force-app/main/default/objects/Employee__c/fields/Designation_Ref__c.field-meta.xml
<CustomField>
    <fullName>Designation_Ref__c</fullName>
    <label>Designation (Lookup)</label>
    <type>Lookup</type>
    <referenceTo>Designation__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <relationshipLabel>Employees</relationshipLabel>
    <description>Structured designation lookup — replaces legacy text Designation__c field</description>
    <inlineHelpText>Select the employee's job designation from the dropdown</inlineHelpText>
</CustomField>