sf-hrms/force-app/main/default/objects/Employee__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <label>Employee Code</label>
    <type>Text</type>
    <length>50</length>
</CustomField>