sf-hrms/force-app/main/default/objects/Employee__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>