sf-hrms/force-app/main/default/objects/Employee__c/fields/Failed_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Attempts__c</fullName>
    <label>Failed Login Attempts</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Consecutive failed portal login attempts. Reset to zero on a successful login. Used with Lockout_Until__c to throttle password guessing.</description>
</CustomField>