sf-hrms/force-app/main/default/objects/Employee__c/fields/Invite_Token__c.field-meta.xml
<CustomField>
    <fullName>Invite_Token__c</fullName>
    <label>Invite Token</label>
    <type>Text</type>
    <length>64</length>
    <description>One-time token for password setup invitation during employee onboarding</description>
    <inlineHelpText>Auto-generated token for employee onboarding — do not edit</inlineHelpText>
</CustomField>