sf-hrms/force-app/main/default/objects/Employee__c/fields/Invite_Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Invite_Token_Expires_At__c</fullName>
    <label>Invite Token Expires At</label>
    <type>DateTime</type>
    <description>Expiry timestamp for the invite token — token is invalid after this date/time</description>
    <inlineHelpText>Token becomes invalid after this date/time</inlineHelpText>
</CustomField>