sf-hrms/force-app/main/default/objects/Employee__c/fields/Invite_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Invite_Token_Hash__c</fullName>
    <label>Invite Token Hash</label>
    <type>Text</type>
    <length>128</length>
    <description>SHA-256 of the invite token. Replaces storing the raw token, so a database read cannot be replayed as an invite link.</description>
</CustomField>