sf-hrms/force-app/main/default/objects/Employee__c/fields/Last_Login_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_At__c</fullName>
    <label>Last Login At</label>
    <type>DateTime</type>
    <description>When this employee last signed in to the portal. Useful for spotting dormant accounts and confirming an invite was used.</description>
</CustomField>