sf-hrms/force-app/main/default/objects/Employee__c/fields/Lockout_Until__c.field-meta.xml
<CustomField>
    <fullName>Lockout_Until__c</fullName>
    <label>Lockout Until</label>
    <type>DateTime</type>
    <description>While set and in the future, portal login is refused for this employee regardless of the password supplied.</description>
</CustomField>