sf-hrms/force-app/main/default/objects/Employee__c/fields/LWD__c.field-meta.xml
<CustomField>
    <fullName>LWD__c</fullName>
    <label>Last Working Day</label>
    <type>Date</type>
    <description>Employee's last working day in the organization</description>
    <inlineHelpText>The final working day — used for offboarding and FNF calculations</inlineHelpText>
</CustomField>