sf-hrms/force-app/main/default/objects/Employee__c/fields/Password_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Password_Changed_At__c</fullName>
    <label>Password Changed At</label>
    <type>DateTime</type>
    <description>When the portal password was last changed. Sessions issued before this instant are rejected, so changing a password signs out existing sessions.</description>
</CustomField>