sf-hrms/force-app/main/default/objects/Employee__c/fields/Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>Password_Hash__c</fullName>
    <label>Password Hash</label>
    <type>Text</type>
    <length>255</length>
    <description>bcrypt password hash for portal login authentication</description>
    <inlineHelpText>Encrypted password hash — do not edit manually</inlineHelpText>
</CustomField>