sf-hrms/force-app/main/default/objects/Employee__c/fields/Photograph__c.field-meta.xml
<CustomField>
    <fullName>Photograph__c</fullName>
    <label>Photograph URL</label>
    <type>Url</type>
</CustomField>