sf-hrms/force-app/main/default/objects/Employee__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <label>Probation End Date</label>
    <type>Date</type>
    <description>Date when the employee's probation period ends</description>
    <inlineHelpText>Probation end date — triggers confirmation reminder 7 days before</inlineHelpText>
</CustomField>