sf-hrms/force-app/main/default/objects/Employee__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <label>Reporting Manager</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employee_Reporting_Managers</relationshipName>
</CustomField>