sf-hrms/force-app/main/default/objects/Employee__c/fields/Reset_Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Reset_Requested_At__c</fullName>
    <label>Reset Requested At</label>
    <type>DateTime</type>
    <description>When a reset was last requested, used to throttle repeat requests for the same account.</description>
</CustomField>