sf-hrms/force-app/main/default/objects/Employee__c/fields/Reset_Token_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Reset_Token_Expires_At__c</fullName>
    <label>Reset Token Expires At</label>
    <type>DateTime</type>
    <description>When the password reset link stops working. Short lived by design.</description>
</CustomField>