sf-hrms/force-app/main/default/objects/Employee__c/fields/Reset_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Reset_Token_Hash__c</fullName>
    <label>Reset Token Hash</label>
    <type>Text</type>
    <length>128</length>
    <description>SHA-256 of the password reset token. The token itself is only ever in the email; storing the hash means a database read cannot be replayed as a reset link.</description>
</CustomField>