sf-hrms/force-app/main/default/objects/Employee__c/fields/Resignation_Date__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Date__c</fullName>
    <label>Resignation Date</label>
    <type>Date</type>
    <description>Date when the employee submitted their resignation</description>
    <inlineHelpText>Date the employee officially resigned</inlineHelpText>
</CustomField>