sf-hrms/force-app/main/default/objects/Employee__c/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <label>Slack User Id</label>
    <type>Text</type>
    <length>20</length>
    <description>Slack member id (for example U0123456789), resolved once and stored. Storing it avoids calling users.lookupByEmail on every send, which is rate limited, needs the users:read.email scope, and fails for employees whose HR email does not match their Slack account.</description>
</CustomField>