sf-hrms/force-app/main/default/objects/Employee__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <type>Lookup</type>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <relationshipLabel>Employees</relationshipLabel>
    <description>Primary work location of the employee</description>
    <inlineHelpText>Select the office or work location for this employee</inlineHelpText>
</CustomField>