sf-hrms/force-app/main/default/objects/Employee__c/validationRules/Aadhaar_12_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhaar_12_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Aadhaar__c)), LEN(Aadhaar__c) != 12)</errorConditionFormula>
    <errorDisplayField>Aadhaar__c</errorDisplayField>
    <errorMessage>Aadhaar number must be exactly 12 digits.</errorMessage>
    <description>Validates Aadhaar card number is exactly 12 characters</description>
</ValidationRule>