sf-hrms/force-app/main/default/objects/Employee__c/validationRules/Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(Official_Email__c)) &amp;&amp; NOT(REGEX(Official_Email__c, "^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$"))</errorConditionFormula>
    <errorDisplayField>Official_Email__c</errorDisplayField>
    <errorMessage>Please enter a valid email address format (e.g. name@company.com).</errorMessage>
    <description>Validates email format using regex pattern</description>
</ValidationRule>