sf-hrms/force-app/main/default/objects/Employee__c/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Official_Email__c)</errorConditionFormula>
    <errorDisplayField>Official_Email__c</errorDisplayField>
    <errorMessage>Official email address is required for all employees.</errorMessage>
    <description>Ensures every employee has an official email address</description>
</ValidationRule>