sf-hrms/force-app/main/default/objects/Employee__c/validationRules/No_Self_Manage.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Self_Manage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Reporting_Manager__c)), Reporting_Manager__c = Id)</errorConditionFormula>
    <errorDisplayField>Reporting_Manager__c</errorDisplayField>
    <errorMessage>An employee cannot be their own reporting manager.</errorMessage>
    <description>Prevents an employee from being assigned as their own reporting manager. The ISBLANK guard is required: without it the formula evaluates null = null as true and blocks every employee created without a manager.</description>
</ValidationRule>