sf-hrms/force-app/main/default/objects/Employee__c/listViews/Active_Employees.listView-meta.xml
<ListView>
    <fullName>Active_Employees</fullName>
    <columns>Employee_Code__c</columns>
    <columns>NAME</columns>
    <columns>Department__c</columns>
    <columns>Designation__c</columns>
    <columns>Official_Email__c</columns>
    <columns>Date_of_Joining__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Employees</label>
</ListView>